--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ dependencies {
 }
 
 application {
-    mainClass = 'ohtu.ohtuvarasto.Main'
+    mainClass = 'paaohjelma.Main'
 }
 
 jacocoTestReport {
@@ -22,11 +22,16 @@ jacocoTestReport {
         xml.enabled true
         html.enabled true
     }
+    afterEvaluate {
+        classDirectories.setFrom(files(classDirectories.files.collect {
+            fileTree(dir: it, exclude: ['paaohjelma/**'])
+        }))
+    }
 }
 
 jar {
     manifest {
-        attributes 'Main-Class': 'ohtu.ohtuvarasto.Main'
+        attributes 'Main-Class': 'paaohjelma.Main'
     }
 }
 
